fix navigation overflow

--- a/src/neo/styles/heights.css
+++ b/src/neo/styles/heights.css
@@ -2,6 +2,10 @@
   height: 650px;
 }
 
+.test-cases .tabbar ~ ul {
+  max-height: 500px;
+}
+
 .test-table {
   height: 440px;
 }
